/cp 2015-07-10  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/54521
	* call.c (convert_like_real): Do not set LOOKUP_ONLYCONVERTING for
	the second step of copy-initialization.

/testsuite
2015-07-10  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54521
	* g++.dg/init/explicit3.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@225705 138bc75d-0d04-0410-961f-82ee72b054a4