gcc/testsuite/g++.dg/init/explicit3.C
@@ -1,0 +1,12 @@
+// PR c++/54521
+
+struct X
+{
+  X(int) {}
+  explicit X(X const &) {}
+};
+
+int main()
+{
+  X x = 1;
+}
